--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,13 +8,33 @@
     tools:context=".MainActivity"
     android:layout_gravity="center"
     android:gravity="center">
+    <LinearLayout
+        android:id="@+id/layout_auth_succ"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:visibility="visible"
+        android:gravity="center">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="20dp"
+            android:text="Authenticattion Success"
+            android:textColor="#4CAF50"
+            android:textSize="30dp" />
+        <Button
+            android:id="@+id/btt_ok"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="ok"/>
+    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_auth"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
-       android:visibility="visible"
+       android:visibility="gone"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
@@ -81,14 +101,6 @@
             android:layout_height="wrap_content"
             android:hint="Birth Date"
             android:inputType="date"
-            android:textSize="20dp"
-            android:padding="20dp"/>
-        <EditText
-            android:id="@+id/email_acc"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Email"
-            android:inputType="textEmailAddress"
             android:textSize="20dp"
             android:padding="20dp"/>
         <EditText
