--- a/app/src/main/res/layout/activity_liste_contacts.xml
+++ b/app/src/main/res/layout/activity_liste_contacts.xml
@@ -14,14 +14,18 @@
         android:hint="Search"
         android:textSize="20dp"
         />
+
     <ScrollView
-        android:layout_weight="3"
         android:layout_width="match_parent"
-        android:layout_height="100dp">
+        android:layout_height="match_parent"
+        android:layout_weight="3"
+   >
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/list_contacts"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+             />
     </ScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
